PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Product_Playbook_History__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Modified_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Playbook_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Playbook</label>
        <referenceTo>Phoenix_Product_Playbook__c</referenceTo>
        <relationshipLabel>Product Playbook History</relationshipLabel>
        <relationshipName>Product_Playbook_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Playbook History</label>
    <nameField>
        <label>Product Playbook History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Playbook History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>